clusters/home/apps/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: security
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
