clusters/home/apps/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: security
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: istio-ingress
  hostnames:
    - "auth.naadroid.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 8080
